// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkBreakpoint should render if the breakpoint is matched 1`] = `
<DocumentFragment>
  <div>
    matches
  </div>
</DocumentFragment>
`;

exports[`BpkBreakpoint should render if the breakpoint is not matched 1`] = `
<DocumentFragment>
  <div>
    does not match
  </div>
</DocumentFragment>
`;
